incorporacion de animaciones

--- a/TP1/html/consulta_producto.html
+++ b/TP1/html/consulta_producto.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
         <div class="container-xxl">
-          <a class="navbar-brand" href="presentacion.html"><h2>Maderos S.A.</h2></a>
+          <a class="navbar-brand" href="presentacion.html"><h2 class="nabvar-Logo">Maderos S.A.</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -47,27 +47,27 @@
         <form id="form-consulta" action="#" method="post">
           <div class="mb-3">
             <label for="inputName" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="inputName">
+            <input type="text" class="form-control input-consulta" id="inputName">
           </div>
           <div class="mb-3">
             <label for="inputLastName" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="inputLastName">
+            <input type="text" class="form-control input-consulta" id="inputLastName">
           </div>
           <div class="mb-3">
             <label for="inputFechaNacimiento" class="form-label">Fecha Nacimiento</label>
-            <input type="date" class="form-control" id="inputFechaNacimiento" min="1930-01-01">
+            <input type="date" class="form-control input-consulta" id="inputFechaNacimiento" min="1930-01-01">
           </div>
           <div class="mb-3">
             <label for="inputEmail" class="form-label">Email</label>
-            <input type="email" class="form-control" id="inputEmail">
+            <input type="email" class="form-control input-consulta" id="inputEmail">
           </div>
           <div class="mb-3">
             <label for="inputQuerry" class="form-label">Consulta</label>
-            <textarea class="form-control" id="inputQuerry"></textarea>
+            <textarea class="form-control input-consulta" id="inputQuerry"></textarea>
           </div>
           <div class="mb-3 form-check">
             <label class="form-check-label" for="inputConfirmDatos">Confirmar Datos</label>
-            <input required type="checkbox" class="form-check-input" id="inputConfirmDatos">
+            <input required type="checkbox" class="form-check-input input-consulta" id="inputConfirmDatos">
           </div>
           <button class="btn btn-primary" onclick="validarForm()">Enviar</button>
         </form>
@@ -83,10 +83,10 @@
             <div class="m-4">
               <div id="redes-footer">
                 <ul class="list-inline">
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Instagram</a></li>
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Facebook</a></li>
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">X/Twitter</a></li>
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Linkedin</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Instagram</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Facebook</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">X/Twitter</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Linkedin</a></li>
                 </ul>
               </div>
             </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="m-4">
               <div class="redes">
-                <a href="../html/contacto.html" class="btn btn-outline-dark">Contacto</a>
+                <a href="../html/contacto.html" class="btn btn-style2">Contacto</a>
               </div>
             </div>
           </div>
