--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
         <div class="container-xxl">
-          <a class="navbar-brand" href="presentacion.html"><h2>Maderos S.A.</h2></a>
+          <a class="navbar-brand" href="presentacion.html"><h2 class="nabvar-Logo">Maderos S.A.</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -60,7 +60,9 @@
         </div>
         <div id="productos" class="container-md presentacion">
           <h4>Explora nuestros productos</h4>
-          <a class="btn btn-primary" href="productos.html">Ver productos</a>
+          <div class="indicador">==&gt</div>
+          <a class="btn btn-style1 btn-motoCierra" onmouseover="selector()" onfocus="selector()" onmouseout="leaveSelector()" onblur="leaveSelector()" href="productos.html">Ver productos</a>
+          <div class="indicador">&lt==</div>
         </div>
       </div>
     </section>
@@ -74,10 +76,10 @@
             <div class="m-4">
               <div id="redes-footer">
                 <ul class="list-inline">
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Instagram</a></li>
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Facebook</a></li>
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">X/Twitter</a></li>
-                  <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Linkedin</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Instagram</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Facebook</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">X/Twitter</a></li>
+                  <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Linkedin</a></li>
                 </ul>
               </div>
             </div>
@@ -90,13 +92,27 @@
             </div>
             <div class="m-4">
               <div class="redes">
-                <a href="../html/contacto.html" class="btn btn-outline-dark">Contacto</a>
+                <a href="../html/contacto.html" class="btn btn-style2">Contacto</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </footer>
+    <script>
+      function selector(){
+        const elements = document.getElementsByClassName('indicador');
+        for (let element of elements){
+          element.style.display = 'inline';
+        }
+      }
+      function leaveSelector(){
+        const elements = document.getElementsByClassName('indicador');
+        for (let element of elements){
+          element.style.display = 'none';
+        }
+      }
+    </script>
   </body>
   <script src="../js/bootstrap.js"></script>
 </html>
