--- a/TP1/html/contacto.html
+++ b/TP1/html/contacto.html
@@ -15,7 +15,7 @@
       <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
           <div class="container-xxl">
-            <a class="navbar-brand" href="presentacion.html"><h2>Maderos S.A.</h2></a>
+            <a class="navbar-brand" href="presentacion.html"><h2 class="nabvar-Logo">Maderos S.A.</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -58,11 +58,11 @@
               </div>
               <div class="info-item">
                   <h4>Nuestro Email</h4>
-                  <p><a class="btn btn-dark" href="mailto:MaderosSA@gmail.com">MaderosSA@gmail.com</a></p>
+                  <p><a class="btn btn-dark btn-select" href="mailto:MaderosSA@gmail.com">MaderosSA@gmail.com</a></p>
               </div>
           </div>
           <div class="contact-actions">
-              <a href="../html/consulta_producto.html" class="btn btn-dark">Realizar un Pedido/Consulta sobre nuestros productos</a>
+              <a href="../html/consulta_producto.html" class="btn btn-dark btn-motoCierra">Realizar un Pedido/Consulta sobre nuestros productos</a>
               <a href="#" class="btn btn-dark m-2">Política de Privacidad</a>
           </div>
         </div>
@@ -77,10 +77,10 @@
               <div class="m-4">
                 <div id="redes-footer">
                   <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Instagram</a></li>
-                    <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Facebook</a></li>
-                    <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">X/Twitter</a></li>
-                    <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Linkedin</a></li>
+                    <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Instagram</a></li>
+                    <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Facebook</a></li>
+                    <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">X/Twitter</a></li>
+                    <li class="list-inline-item"><a href="#" class="btn btn-style2 redes-footer">Linkedin</a></li>
                   </ul>
                 </div>
               </div>
@@ -93,7 +93,7 @@
               </div>
               <div class="m-4">
                 <div class="redes">
-                  <a href="../html/contacto.html" class="btn btn-outline-dark">Contacto</a>
+                  <a href="../html/contacto.html" class="btn btn-style2">Contacto</a>
                 </div>
               </div>
             </div>
