--- a/TP1/html/productos.html
+++ b/TP1/html/productos.html
@@ -88,7 +88,7 @@
                   },
                   mode:'cors',
                   cache:'default'};
-        fetch(url, init)
+        await fetch(url, init)
               .then(respuesta=> {
                 if (!respuesta.ok) {
                   throw new Error(`HTTP error! Estado: ${respuesta.status}`);
@@ -97,25 +97,12 @@
               })
               .then(data => {
                 const productos = data; 
-                // let div1 = document.createElement('div');
-                // div1.setAttribute('class','row g-0');
-                // let div2 = document.createElement('div');
-                // div1.setAttribute('class','card mb-3 card-flex');
-                // let div3 = document.createElement('div');
-                // div3.setAttribute('class','row g-0');
-                // let div4 = document.createElement('div');
-                // div4.setAttribute('class','col-md-4');
-                // let img = document.createElement('img');
-                // img.setAttribute('class', 'img-fluid rounded-start');
-                // img.setAttribute('src',productos[0].imagen);
-                // img.setAttribute('alt',productos[0].title);
-                // let div5 = document.createElement('div');
-                // div5.setAttribute('class', 'col-md-8');
                 let contenido = "";
                 let elementos = "";
-                for (let i = 0; i < productos.length; i++){
+                let cantidadElementos = productos.length;
+                for (let i = 0; i < cantidadElementos; i++){
                   let elemento = `<div class="col-sm-6 mb-3">
-                                    <div class="card  card-flex">
+                                    <div class="card card-flex h-100">
                                       <div class="row g-0">
                                         <div class="col-md-4">
                                           <img src="${productos[i].imagen}" class="img-fluid rounded-start" alt="${productos[i].title}">
@@ -132,9 +119,7 @@
                                   </div>`;
                   elementos = elemento + elementos;
                   if (i%2 != 0){
-                    let apertura = '<div class="row g-0">';
-                    let cierre = '</div>';
-                    contenido = contenido + apertura + elementos + cierre; 
+                    contenido = contenido + '<div class="row g-0">' + elementos + '</div>'; 
                     elementos = "";
                   }
                 }        
@@ -144,21 +129,6 @@
                 console.log(error);
               });
       }
-    </script>
-    <script>
-      const cards = document.querySelectorAll('card');
-      let maxHeight = 0;
-      console.log(cards);
-      // Encuentra la altura máxima
-      cards.forEach(card => {
-        maxHeight = Math.max(maxHeight, card.offsetHeight);
-        console.log(maxHeight);
-      });
-    
-      // Aplica la altura máxima a todas las tarjetas
-      cards.forEach(card => {
-        card.style.height = `${maxHeight}px`;
-      });
     </script>
   </body>
   <script src="../js/bootstrap.js"></script>
