Cambio del uso de fetch de promesas, a async y await y eliminacion de asignacion redundante de clases

--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -43,14 +43,14 @@
     </header>
     <section id="container-presentacion-index" class="flex-grow-1">
       <div class="container-md">
-        <div id="bienvenida" class="container-md presentacion">
+        <div id="bienvenida" class="presentacion">
           <h3>Bienvenidos a Maderos S.A.</h3>
         </div>
-        <div id="presentacion-empresa" class="container-md presentacion">
+        <div id="presentacion-empresa" class="presentacion">
           <h4>Fuente confiable de madera para todos tus proyectos</h4>
           <p>En Maderos S.A. nos enorgullece ofrecerte una amplia selección de maderas de la más alta calidad, provenientes de bosques sostenibles y gestionados de manera responsable.</p>
         </div>
-        <div id="motivos-eleccion" class="container-md presentacion">
+        <div id="motivos-eleccion" class="presentacion">
           <h4>Motivos para elegirnos:</h4>
           <ul>
             <li>Variedad de productos</li>
@@ -58,7 +58,7 @@
             <li>Calidad garantizada</li>
           </ul>
         </div>
-        <div id="productos" class="container-md presentacion">
+        <div id="productos" class="presentacion">
           <h4>Explora nuestros productos</h4>
           <div class="indicador">==&gt</div>
           <a class="btn btn-style1 btn-motoCierra" onmouseover="selector()" onfocus="selector()" onmouseout="leaveSelector()" onblur="leaveSelector()" href="productos.html">Ver productos</a>
